syntax = "proto3";

import "google/protobuf/empty.proto";
/**
 * This is an example of a protobuf message.
 */
package clock;


option java_multiple_files = true;
option java_package = "org.Muhammad.example.clock";
option java_outer_classname = "ClockProto";

service Clock {
    rpc ClockAction(google.protobuf.Empty) returns (stream ClockActionResponse) {};
    rpc ResetClock(ClockResetRequest) returns (ClockResetResponse){};

}

message ClockActionResponse {
  int32 clockTime = 1;
}

message ClockResetRequest {
    string clockResetRequest = 1;
}

message ClockResetResponse {
    string clockResetResponse = 1;
}